--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,21 @@
+@font-face {
+  font-family: 'Helvetica';
+  src: url('../src/assets/font/Helvetica.woff') format('woff');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  src: url('../src/assets/font/Helvetica-Bold.woff') format('woff');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  src: url('../src/assets/font/Helvetica-Light.woff') format('woff');
+  font-weight: 300;
+}
+
 :root {
   --white-base: #fff;
   --gray: #E3E5E5;
@@ -28,6 +46,11 @@ body {
 body {
   background: var(--black-base);
   color: var(--white-base);
+  font-family: 'Helvetica', sans-serif;
+  font-size: var(--font-size-m);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
 }
 
 a {
