--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -8,6 +8,9 @@
     font-weight: 700;
     cursor: pointer;
 }
+.Button:disabled{
+    cursor: default;
+}
 .primary{
     background: var(--orange-base);
     padding: 12px 16px;
