--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,3 +23,17 @@
     display: flex;
     align-items: flex-start;
 }
+.earth{
+    max-width: 536px;
+    max-height: 620px;
+    width: 100%;
+    height: 100%;
+    margin-right: 127px;
+}
+@media screen and (max-width: 1025px) {
+    .earth{
+        margin-right: 58px;
+        max-width: 327px;
+        max-height: 436px;
+    }
+}
