--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,8 +55,25 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+  overflow: hidden;
 }
 
 a {
   text-decoration: none;
+}
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--black-light);
+  border-radius: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--black-base);
+}
+
+::-webkit-scrollbar-button {
+  display: none;
 }
