--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,16 +62,16 @@ a {
   text-decoration: none;
 }
 ::-webkit-scrollbar {
-  width: 1px;
+  width: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--black-light);
+  background-color: var(--orange-base);
   border-radius: 12px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--black-base);
+  background-color: var(--black-light);
 }
 
 ::-webkit-scrollbar-button {
