add change unit of mesure km/lunar

--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -9,7 +9,7 @@
     cursor: pointer;
 }
 .Button:disabled{
-    cursor: default;
+    cursor: not-allowed;
 }
 .primary{
     background: var(--orange-base);
