--- a/components/AsteroidsList/ui/AsteroidList/AsteroidsList.module.css
+++ b/components/AsteroidsList/ui/AsteroidList/AsteroidsList.module.css
@@ -12,3 +12,21 @@
     line-height: 36px;
     margin-bottom: 8px;
 }
+.changeUnit{
+    display: flex;
+    gap: 4px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px
+}
+.changeUnit span{
+    font-weight: 700;
+}
+.changeUnit p{
+    text-decoration: underline;
+    cursor: pointer;
+}
+.changeUnit .active{
+    font-weight: 700;
+    text-decoration: none;
+}
