--- a/layout/main/Layout.module.css
+++ b/layout/main/Layout.module.css
@@ -22,6 +22,7 @@
     font-style: normal;
     line-height: normal;
 }
+
 .container {
     display: flex;
     gap: 127px;
@@ -40,21 +41,47 @@
     flex: 1;
 }
 
-@media screen and (max-width: 425px) {
-    .container{
+@media screen and (max-width: 1100px) {
+    .container {
+        gap: 58px;
+    }
+    .imageContainer {
+        z-index: -1;
+        position: absolute;
+        left: -100px;
+    }
+}
+@media screen and (max-width: 900px) {
+    .imageContainer {
+        z-index: -1;
+        position: absolute;
+        left: -220px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .imageContainer {
+        z-index: -1;
+        position: absolute;
+        left: -300px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .container {
         width: 100%;
         gap: 24px;
         justify-content: center;
         align-items: center;
         position: relative;
     }
-    .imageContainer{
-        z-index: -1;
-        position: absolute;
+
+    .imageContainer {
         top: -11px;
         left: -240px;
     }
-    .image{
+
+    .image {
         height: 436px;
     }
 }
