--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     gap:24px;
     height: calc(100vh - var(--header-size));
-    width: 402px;
 }
 
 .list{
@@ -12,13 +11,32 @@
     gap:24px;
     overflow-y: scroll;
     height: 100%;
+    width: 402px;
 }
-@media screen and (max-width: 425px){
+
+@media screen and (max-width: 1100px){
+    .Cart{
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 660px) {
+    .Cart{
+        align-items: center;
+    }
+    .list{
+        width: 300px;
+    }
+}
+
+@media screen and (max-width: 480px){
     .Cart{
         flex-direction: column;
-        align-items: center;
         justify-content: center;
         padding-right: 10px;
+    }
+    .list{
         width: 279px;
+
     }
 }
