--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,10 +3,16 @@
     align-items: flex-start;
     height: calc(100vh - var(--header-size));
 }
-@media screen and (max-width: 425px){
+@media screen and (max-width: 1100px){
+    .Home{
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+}
+@media screen and (max-width: 480px){
     .Home{
         flex-direction: column;
-        align-items: flex-end;
+        align-items: center;
         justify-content: space-between;
     }
 }
