--- a/components/AsteroidsList/ui/AsteroidList/AsteroidsList.module.css
+++ b/components/AsteroidsList/ui/AsteroidList/AsteroidsList.module.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-    overflow-y: scroll;
 }
 .title{
     font-size: var(--font-size-xl);
@@ -41,4 +40,11 @@
     .asteroidsList{
         width: 279px;
     }
+}
+
+.list{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    overflow-y: scroll;
 }
