--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -6,12 +6,15 @@
 }
 
 .list{
+    height: 95%;
     display: flex;
     flex-direction: column;
     gap:24px;
     overflow-y: scroll;
-    height: 100%;
     width: 402px;
+}
+.footer{
+    padding: 16px;
 }
 
 @media screen and (max-width: 1100px){
